--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "*",
     "@testing-library/user-event": "*",
     "bootstrap": "^5.1.3",
+    "enzyme": "^3.11.0",
     "react": "*",
     "react-dom": "*",
     "react-scripts": "*",
