--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "*",
     "@testing-library/react": "*",
     "@testing-library/user-event": "*",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "enzyme": "^3.11.0",
     "react": "*",
